force-app/main/default/objects/OrderItem/fields/FIN_ActionDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_ActionDate__c</fullName>
    <label>Action Date</label>
    <type>Date</type>
</CustomField>