force-app/main/default/objects/OrderItem/fields/FIN_Applied_Rate__c.field-meta.xml
<CustomField>
    <fullName>FIN_Applied_Rate__c</fullName>
    <formula>FIN_LibraryAssociation__r.FIN_Consumption_Schedule__r.FIN_Applied_Consumption_Rate__r.Price</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied Rate</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Currency</type>
</CustomField>