force-app/main/default/objects/OrderItem/fields/FIN_AXSProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSProduct__c</fullName>
    <formula>TEXT(Product2.FIN_AXSProduct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AXS Product</label>
    <type>Text</type>
</CustomField>