force-app/main/default/objects/OrderItem/fields/FIN_ClientID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ClientID__c</fullName>
    <formula>FIN_Client__r.FIN_ClientID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID</label>
    <type>Text</type>
</CustomField>