force-app/main/default/objects/OrderItem/fields/FIN_Component_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Component_Description__c</fullName>
    <label>Component Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>