force-app/main/default/objects/OrderItem/fields/FIN_ComponentType__c.field-meta.xml
<CustomField>
    <fullName>FIN_ComponentType__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>