force-app/main/default/objects/OrderItem/fields/FIN_ContextName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextName__c</fullName>
    <formula>SBQQ__Contract__r.FIN_Context__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Context Name</label>
    <type>Text</type>
</CustomField>