force-app/main/default/objects/OrderItem/fields/FIN_ContractedProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContractedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracted Product</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>