force-app/main/default/objects/OrderItem/fields/FIN_CurrentPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_CurrentPaidAmount__c</fullName>
    <label>Current Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>