force-app/main/default/objects/OrderItem/fields/FIN_EnrichedTag__c.field-meta.xml
<CustomField>
    <fullName>FIN_EnrichedTag__c</fullName>
    <label>Enriched Tag</label>
    <length>250</length>
    <type>Text</type>
</CustomField>