force-app/main/default/objects/OrderItem/fields/FIN_Entity__c.field-meta.xml
<CustomField>
    <fullName>FIN_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Entity)</relationshipLabel>
    <relationshipName>Order_Products3</relationshipName>
    <type>Lookup</type>
</CustomField>