force-app/main/default/objects/OrderItem/fields/FIN_Event__c.field-meta.xml
<CustomField>
    <fullName>FIN_Event__c</fullName>
    <formula>FIN_EventLookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event</label>
    <type>Text</type>
</CustomField>