force-app/main/default/objects/OrderItem/fields/FIN_EventDesc__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventDesc__c</fullName>
    <label>Event Desc</label>
    <length>250</length>
    <type>Text</type>
</CustomField>