force-app/main/default/objects/OrderItem/fields/FIN_EventID__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventID__c</fullName>
    <formula>FIN_EventLookup__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event ID</label>
    <type>Text</type>
</CustomField>