force-app/main/default/objects/OrderItem/fields/FIN_EventLookup__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Lookup</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>