force-app/main/default/objects/OrderItem/fields/FIN_Fee__c.field-meta.xml
<CustomField>
    <fullName>FIN_Fee__c</fullName>
    <label>Fee</label>
    <length>250</length>
    <type>Text</type>
</CustomField>