force-app/main/default/objects/OrderItem/fields/FIN_FeeComponentID__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponentID__c</fullName>
    <label>Fee Component ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>