force-app/main/default/objects/OrderItem/fields/FIN_FeeCompRCC__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeCompRCC__c</fullName>
    <label>Fee Component RCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>