force-app/main/default/objects/OrderItem/fields/FIN_FeeCompRCN__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeCompRCN__c</fullName>
    <label>Fee component RCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>