force-app/main/default/objects/OrderItem/fields/FIN_FeeCompRCRA__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeCompRCRA__c</fullName>
    <label>Fee Comp Revenue Center Remittance Acc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>