force-app/main/default/objects/OrderItem/fields/FIN_FeeGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeGrossAmount__c</fullName>
    <label>Fee Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>