force-app/main/default/objects/OrderItem/fields/FIN_FeeID__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeID__c</fullName>
    <label>Fee ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>