force-app/main/default/objects/OrderItem/fields/FIN_FeeNetAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeNetAmount__c</fullName>
    <label>Fee Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>