force-app/main/default/objects/OrderItem/fields/FIN_FeeTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeTaxAmount__c</fullName>
    <label>Fee Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>