force-app/main/default/objects/OrderItem/fields/FIN_FeeType__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeType__c</fullName>
    <label>Fee Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>