force-app/main/default/objects/OrderItem/fields/FIN_GLCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_GLCode__c</fullName>
    <label>GL Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>