force-app/main/default/objects/OrderItem/fields/Fin_InventoryType__c.field-meta.xml
<CustomField>
    <fullName>Fin_InventoryType__c</fullName>
    <label>Inventory Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>