force-app/main/default/objects/OrderItem/fields/FIN_LibraryAssociation__c.field-meta.xml
<CustomField>
    <fullName>FIN_LibraryAssociation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Library Association</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Sales Transactions</relationshipLabel>
    <relationshipName>Sales_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>