force-app/main/default/objects/OrderItem/fields/FIN_MerchGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_MerchGrossAmount__c</fullName>
    <label>Merch Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>