force-app/main/default/objects/OrderItem/fields/FIN_MerchNetAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_MerchNetAmount__c</fullName>
    <label>Merch Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>