force-app/main/default/objects/OrderItem/fields/FIN_MerchPriceComponentId__c.field-meta.xml
<CustomField>
    <fullName>FIN_MerchPriceComponentId__c</fullName>
    <label>Merch Price Component Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>