force-app/main/default/objects/OrderItem/fields/FIN_MerchTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_MerchTaxAmount__c</fullName>
    <label>Merch Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>