force-app/main/default/objects/OrderItem/fields/FIN_Missing_Library_Association__c.field-meta.xml
<CustomField>
    <fullName>FIN_Missing_Library_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missing Library Association</label>
    <type>Checkbox</type>
</CustomField>