force-app/main/default/objects/OrderItem/fields/FIN_Operator__c.field-meta.xml
<CustomField>
    <fullName>FIN_Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>