force-app/main/default/objects/OrderItem/fields/FIN_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Order_ID__c</fullName>
    <formula>Order.FIN_OrderID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order ID</label>
    <type>Text</type>
</CustomField>