force-app/main/default/objects/OrderItem/fields/FIN_Owner__c.field-meta.xml
<CustomField>
    <fullName>FIN_Owner__c</fullName>
    <formula>Order.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>