force-app/main/default/objects/OrderItem/fields/FIN_PaymentDistribution__c.field-meta.xml
<CustomField>
    <fullName>FIN_PaymentDistribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Distribution</label>
    <referenceTo>FIN_PaymentDistribution__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>