force-app/main/default/objects/OrderItem/fields/FIN_Primary_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Primary_Product_ID__c</fullName>
    <label>Primary Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>