force-app/main/default/objects/OrderItem/fields/FIN_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>FIN_Product_Description__c</fullName>
    <label>Product Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>