force-app/main/default/objects/OrderItem/fields/FIN_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Product_Type__c</fullName>
    <label>Product Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>