force-app/main/default/objects/OrderItem/fields/FIN_Revenue_Center_Name__c.field-meta.xml
<CustomField>
    <fullName>FIN_Revenue_Center_Name__c</fullName>
    <label>Revenue Center Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>