force-app/main/default/objects/OrderItem/fields/FIN_Revenue_Center_Remittance_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Revenue_Center_Remittance_Account__c</fullName>
    <label>Revenue Center Remittance Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>