force-app/main/default/objects/OrderItem/fields/FIN_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>FIN_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>