force-app/main/default/objects/OrderItem/fields/FIN_Sale_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>FIN_Sale_Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique Sales ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>