force-app/main/default/objects/OrderItem/fields/FIN_StatAdjCount__c.field-meta.xml
<CustomField>
    <fullName>FIN_StatAdjCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Statistical Adjustment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>