force-app/main/default/objects/OrderItem/fields/FIN_Total_Sales_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Sales_Net_Amount__c</fullName>
    <formula>IF( Product2.Name = &apos;Base&apos;||  FIN_Amount__c  &lt;&gt; 0, UnitPrice , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>