force-app/main/default/objects/OrderItem/fields/FIN_TotalGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalGrossAmount__c</fullName>
    <formula>IF(FIN_Gross_Amount__c &lt;&gt; 0, FIN_Gross_Amount__c,
				IF(FIN_FeeGrossAmount__c &lt;&gt; 0, FIN_FeeGrossAmount__c,
							IF(FIN_MerchGrossAmount__c &lt;&gt; 0, FIN_MerchGrossAmount__c, 0)
						)
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>