force-app/main/default/objects/OrderItem/fields/FIN_TotalNetAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalNetAmount__c</fullName>
    <formula>IF(FIN_Amount__c &lt;&gt; 0, FIN_Amount__c,
IF(FIN_FeeNetAmount__c &lt;&gt; 0, FIN_FeeNetAmount__c,
IF(FIN_MerchNetAmount__c &lt;&gt; 0, FIN_MerchNetAmount__c, 0)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>