force-app/main/default/objects/OrderItem/fields/FIN_TotalTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalTaxAmount__c</fullName>
    <formula>IF(FIN_Tax_Amount__c &lt;&gt; 0, FIN_Tax_Amount__c,
IF(FIN_FeeTaxAmount__c &lt;&gt; 0, FIN_FeeTaxAmount__c,
IF(FIN_MerchTaxAmount__c &lt;&gt; 0, FIN_MerchTaxAmount__c, 0)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>