force-app/main/default/objects/OrderItem/fields/FIN_ValueTax_I__c.field-meta.xml
<CustomField>
    <fullName>FIN_ValueTax_I__c</fullName>
    <label>Value - Tax Included</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>