force-app/main/default/objects/OrderItem/fields/FIN_VariantSKU__c.field-meta.xml
<CustomField>
    <fullName>FIN_VariantSKU__c</fullName>
    <label>Variant SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>