force-app/main/default/objects/OrderItem/fields/FIN_Zone__c.field-meta.xml
<CustomField>
    <fullName>FIN_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>