force-app/main/default/objects/OrderItem/fields/FIN_ZoneGLCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_ZoneGLCode__c</fullName>
    <label>Zone GL code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>