force-app/main/default/objects/OrderItem/listViews/All_Sales_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Sales_Transactions</fullName>
    <columns>Product2</columns>
    <columns>OriginalOrderItem</columns>
    <columns>Quantity</columns>
    <columns>UnitPrice</columns>
    <columns>ListPrice</columns>
    <columns>ODER_ITEM.START_DATE</columns>
    <columns>ODER_ITEM.END_DATE</columns>
    <columns>TotalPrice</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Transactions</label>
</ListView>